Fix encryption service