@@ -4,6 +4,7 @@ import lombok.SneakyThrows;
 
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
+import java.util.Base64;
 
 public class EncryptionService {
 
@@ -21,13 +22,13 @@ public class EncryptionService {
         encryptionCipher.init(Cipher.ENCRYPT_MODE, key);
         byte[] utf8 = input.getBytes("UTF8");
         byte[] enc = encryptionCipher.doFinal(utf8);
-        return new sun.misc.BASE64Encoder().encode(enc);
+        return Base64.getEncoder().encodeToString(enc);
     }
 
     @SneakyThrows
     public String decrypt(String input, SecretKey key) {
         decryptionCipher.init(Cipher.DECRYPT_MODE, key);
-        byte[] dec = new sun.misc.BASE64Decoder().decodeBuffer(input);
+        byte[] dec = Base64.getDecoder().decode(input);
         byte[] utf8 = decryptionCipher.doFinal(dec);
         return new String(utf8, "UTF8");
     }
